--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   
+
+ 
+  file_picker: ^6.1.1  # Ensure correct indentation
+
   dropdown_button2: ^2.3.9  # Add this line
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,7 +45,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+   
 
+   
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
