--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
 
   # Add this below flutter
- 
+  logger: ^2.0.2 # Or the latest version from pub.dev
   
   
  
@@ -44,6 +44,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   fl_chart: ^0.70.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
